PySWIP CHANGELOG
================

+ 0.1.3

  * Renamed ``pyswip/util.py`` to ``pyswip/prolog.py``.
  * New module ``pyswip.easy``.
  * Additions to the core library.
  * Added example, "register foreign" which shows how to register a Python function as an SWI-Prolog predicate.
  * Added example, "Towers of Hanoi"

+ 0.1.2

  * Renamed ``PrologRunner`` to ``Prolog``.
  * Removed ``query`` method of ``Prolog``, ``queryGenerator`` is renamed as ``query``.
  * Added ``asserta``, ``assertz`` and ``consult`` methods to ``Prolog``.
  * The necessary cleanup is done even if the ``query`` generator doesn't run to the end.
  * Errors during the execution of ``query`` is caught and ``PrologError`` is raised.
  * Many new additions to the core library.
  * Added ``examples`` directory.
  * Added examples, *coins* and *draughts*.
  

+ 0.1.1

  * Added ``queryGenerator`` to PrologRunner, ``query`` calls ``queryGenerator``.
  * Added example ``send more money``.
